# sova

./: .gitignore  404.html  Cargo.toml  Dockerfile  README.md  _config.yml  analyze.bs.puml  classes.puml  configuration.html  docker-compose.yml  index.html  index.md  install.sh  installation.html  introduction.html  load_configuration.bs.puml  main.bs.puml  print.html  rule.bs.puml  searchindex.js  searchindex.json  snoopy.ini.template  some.json  sova.build.yaml  sova.service  sova.yaml  sova_envs.sh  wrap_bash_builtins.sh
.docs/: book.toml
.docs/src/: SUMMARY.md  configuration.md
.github/workflows/: deploy_docs.yml  tests.yml
conf/: sova.conf  supervisord.conf
docs/src/: installation.md  introduction.md
examples/log4shell-vulnerable-app/: Dockerfile  Dockerfile-jndi  build.sh  docker-compose.yml  sova.yaml
examples/phuip-fpizdam/: build.sh  docker-compose.yml  sova.yaml
log4j/: README.md  docker-compose.yml
log4j-shell-poc-modified/: Dockerfile  sova.yaml
log4j-shell-poc-modified/src/: utils.rs
log4j/cve-neo/: Dockerfile
phuip-fpizdam/: README.md  docker-compose.yml
phuip-fpizdam-modified/: docker-compose.yml  sova.yaml
phuip-fpizdam-modified/reproducer/: Dockerfile
phuip-fpizdam/attacker/: Dockerfile
phuip-fpizdam/reproducer/: Dockerfile
sample_app/: example.c  main.py  sample_app.conf
src/: analyzer.rs  analyzer_tests.rs  behaviour.rs  configuration.rs  lib.rs  logger.rs  main.rs  record.rs  record_tests.rs  rule.rs  rule_tests.rs  sova.rs  subject.rs  utils.rs
syscalls/: bind.html  connect.html  execv.html  execve.html  open.html
(+55 files in other folders)
