[package]
authors = ["Artem Konovalov"]
name = "sova"
version = "0.1.0"
edition = "2021"

[dependencies]
serde = { version = "1.0.132", features = ["derive"] }
serde_yaml = "0.8"
lazy_static = "1.0.0"
libc = "0.2"
log = "0.4"
fern = "0.5"
chrono = "0.4"

[lib]
crate-type = ["cdylib"]
name = "sova"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
